alltoolsintegration/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node
  template:
    metadata:
      labels:
        app: node
    spec:
      containers:
      - name: node
        image: bkshivani/node-cicd-app:latest
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python
  template:
    metadata:
      labels:
        app: python
    spec:
      containers:
      - name: python
        image: bkshivani/python-cicd-app:latest
        ports:
        - containerPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go
  template:
    metadata:
      labels:
        app: go
    spec:
      containers:
      - name: go
        image: bkshivani/go-cicd-app:latest
        ports:
        - containerPort: 8080
